--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-12.26MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20719, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-213.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.47MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇸🇬 新加坡-2.99MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: ss2.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: ss2.2046.gq, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: sgg.2046.gq, port: 4443, type: trojan, password: 794871c6-022b-4498-b816-296e8a581d86, sni: sgg.2046.gq, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-542.3KB/s(Youtube:不良林), server: 112.64.98.133, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 112.64.98.133}}
-  - {name: 🇭🇰 香港-466.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6003, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.65MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-9.15MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.65MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇨🇳 中国-513.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇨🇳 中国-783.1KB/s(Youtube:不良林), server: 625hk01.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 625hk01.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.26MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20720, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.60MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-14.52MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20724, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.25MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20718, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-17.16MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20725, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
-      - 🇨🇳 中国-213.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-542.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-466.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.15MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-783.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-14.52MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-17.16MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
